tests/baselines/reference/templateStringsArrayTypeNotDefinedES5Mode.errors.txt
tests/cases/compiler/templateStringsArrayTypeNotDefinedES5Mode.ts(4,3): error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray'.
  Index signature is missing in type 'TemplateStringsArray'.


==== tests/cases/compiler/templateStringsArrayTypeNotDefinedES5Mode.ts (1 errors) ====
    function f(x: TemplateStringsArray, y: number, z: number) {
    }
    
    f({}, 10, 10);
      ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray'.
!!! error TS2345:   Index signature is missing in type 'TemplateStringsArray'.
    
    f `abcdef${ 1234 }${ 5678 }ghijkl`;